# three-body-problem-simulator

./: .gitignore  README.md
release/: .ninja_deps  .ninja_log  build.ninja  qtcsettings.cmake
release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_Probleme_a_trois_corps_88cbc32e69.cmake
release/.qt/rcc/: resources.qrc
release/Desktop_Qt_6_10_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  build.ninja  qtcsettings.cmake
release/Desktop_Qt_6_10_2_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_Probleme_a_trois_corps_88cbc32e69.cmake
release/Desktop_Qt_6_10_2_MinGW_64_bit-Release/Probleme_a_trois_corps_autogen/: deps  mocs_compilation.cpp
release/Probleme_a_trois_corps_autogen/: deps
release/Probleme_a_trois_corps_autogen/EWIEGA46WW/: moc_addexperiencedialog.cpp  moc_bodypanel.cpp  moc_createtemplatedialog.cpp  moc_historydialog.cpp  moc_lancertemplatedialog.cpp  moc_mainwindow.cpp  moc_simview.cpp  moc_startexperience.cpp  moc_templatedialog.cpp
src/: CMakeLists.txt  addexperiencedialog.cpp  addexperiencedialog.h  body.cpp  bodypanel.cpp  bodypanel.h  bodypanel.ui  constants.cpp  constants.h  corps.cpp  corps.h  createtemplatedialog.cpp  createtemplatedialog.h  experiencerecord.h  historydialog.cpp  historydialog.h  integrateur.cpp  integrateur.h  lancertemplatedialog.cpp  lancertemplatedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modele.cpp  modele.h  randomgenerator.cpp  randomgenerator.h  simview.cpp  simview.h  startexperience.cpp  startexperience.h  templatedialog.cpp  templatedialog.h  templatedialog.ui  vect.cpp  vect.h
(+21 files in other folders)
